--- a/ci/01-pipeline.yml
+++ b/ci/01-pipeline.yml
@@ -47,9 +47,18 @@ jobs:
       PCF_USER: {{stage-deploy-username}}
       PCF_PWD: {{stage-deploy-password}}
       PCF_SPACE: {{pcf-stage-space}}
+  - task: prepare-app-manifest
+    file: PivotalDevOpsTutorial/ci/tasks/app-manifest-prep.yml
+    params:
+      PCF_APP_SUFFIX: {{pcf-stage-app-suffix}}        
+  - put: dynatrace
+    params:
+      monspecserviceenvironment: SampleJSonService/Staging
+      pipelinetaskname: ConcourseDeploy
+      deployversion: v1.5
   - put: PCF-Stage
     params:
-      manifest: PivotalDevOpsTutorial/app/manifest.yml
+      manifest: app-manifest-output/manifest.yml
       path: PivotalDevOpsTutorial/app
 
 - name: load-tests
