credentials update for syntax

--- a/ci/credentials-sample.yml
+++ b/ci/credentials-sample.yml
@@ -12,4 +12,4 @@ pcf-prod-space: <pcf-prod-space>
 pcf-prod-api: <pcf-prod-api>
 pcf-prod-app-suffix: <pcf-prod-app-suffix>
 pcf-prod-app-domain: <pcf-prod-app-domain>
-git-repo: https://github.com/username/PivotalDevOpsTutorial.git
+gitrepo: https://github.com/username/PivotalDevOpsTutorial.git
