--- a/ci/01-pipeline.yml
+++ b/ci/01-pipeline.yml
@@ -100,6 +100,7 @@ jobs:
     file: PivotalDevOpsTutorial/ci/tasks/app-manifest-prep.yml
     params:
       PCF_APP_SUFFIX: ((pcf-prod-app-suffix))  
+      PRODUCTION: true      
   - put: PCF-Prod
     params:
       manifest: app-manifest-output/manifest.yml
