--- a/ci/03-pipeline.yml
+++ b/ci/03-pipeline.yml
@@ -83,6 +83,7 @@ jobs:
       monspecserviceenvironment: SampleJSonService/Staging
       pipelinetaskname: ConcourseDeploy
       deployversion: v1.5
+      APP-REPO: PivotalDevOpsTutorial
   - put: PCF-Stage
     params:
       manifest: app-manifest-output/manifest.yml
