updating with changes to Dynatrace resource

--- a/ci/02-pipeline.yml
+++ b/ci/02-pipeline.yml
@@ -81,10 +81,12 @@ jobs:
       monspecserviceenvironment: SampleJSonService/Staging
       pipelinetaskname: ConcourseDeploy
       deployversion: v1.5
+      APP_REPO: PivotalDevOpsTutorial
   - put: PCF-Stage
     params:
       manifest: app-manifest-output/manifest.yml
       path: PivotalDevOpsTutorial/app
+      
 
 - name: load-tests
   serial: true
@@ -134,11 +136,13 @@ jobs:
     params:
       monspecserviceenvironment: SampleJSonService/Production
       pipelinetaskname: ConcourseDeploy
-      deployversion: v1.5      
+      deployversion: v1.5
+      APP_REPO: PivotalDevOpsTutorial
   - put: PCF-Prod
     params:
       manifest: app-manifest-output/manifest.yml
       path: PivotalDevOpsTutorial/app
+
 
 - name: load-tests-prod
   serial: true
