--- a/ci/04-pipeline.yml
+++ b/ci/04-pipeline.yml
@@ -91,6 +91,7 @@ jobs:
       monspecserviceenvironment: SampleJSonService/Staging
       pipelinetaskname: ConcourseDeploy
       deployversion: v1.5
+      APP_REPO: PivotalDevOpsTutorial      
   - put: PCF-Stage
     params:
       manifest: app-manifest-output/manifest.yml
@@ -185,7 +186,8 @@ jobs:
     params:
       monspecserviceenvironment: SampleJSonService/Production
       pipelinetaskname: ConcourseDeploy
-      deployversion: v1.5      
+      deployversion: v1.5 
+      APP_REPO: PivotalDevOpsTutorial      
   - put: PCF-Prod
     params:
       manifest: app-manifest-output/manifest.yml
